python/testData/inspections/unusedImport/unusedUnresolvedPackageImported/unusedUnresolvedPackageImported.py
<warning descr="Unused import statement 'import spam.eggs'">import <error descr="No module named 'spam'">spam</error>.eggs</warning>